[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["Roman Solovev <w.roman.developer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
